--- a/serverless.yml
+++ b/serverless.yml
@@ -19,8 +19,6 @@ provider:
     ATTACHMENTS_S3_BUCKET: todo-app-attachments-${self:provider.stage}
     USER_ID_INDEX: UserIdIndex
     IMAGES_SIGNED_URL_EXPIRATION: 60 * 60 * 5 # 5 mins
-    # AUTH0_SECRET_ID: TodoAppAuth0Secret-\${self:provider.stage}
-    # AUTH0_SECRET_FIELD: TodoAppAuth0Secret
 
   iamRoleStatements:
     - Effect: Allow
@@ -116,6 +114,17 @@ functions:
           path: todos/{todoId}/attachment
           cors: true
           authorizer: Auth
+    iamRoleStatementsInherit: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:UpdateItem
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+      - Effect: Allow
+        Action:
+          - s3:PutObject
+          - s3:GetObject
+        Resource: arn:aws:s3:::${self:provider.environment.ATTACHMENTS_S3_BUCKET}/*
 
 resources:
   Resources:
