--- a/serverless.yml
+++ b/serverless.yml
@@ -20,13 +20,6 @@ provider:
     USER_ID_INDEX: UserIdIndex
     IMAGES_SIGNED_URL_EXPIRATION: 60 * 60 * 5 # 5 mins
 
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - s3:PutObject
-        - s3:GetObject
-      Resource: arn:aws:s3:::${self:provider.environment.ATTACHMENTS_S3_BUCKET}/*
-
 custom:
   documentation:
     api:
@@ -34,6 +27,13 @@ custom:
         version: v1.0.0
         title: Udagram API
         description: Serverless application for images sharing
+    models:
+      - name: createTodo
+        contentType: application/json
+        schema: ${file(models/create-todo-item-request.json)}
+      - name: updateTodo
+        contentType: application/json
+        schema: ${file(models/update-todo-item-request.json)}
 
 functions:
   Auth:
@@ -66,6 +66,12 @@ functions:
           path: todos
           cors: true
           authorizer: Auth
+          reqValidatorName: RequestBodyValidator
+          documentation:
+            summary: Create a new todo item
+            description: Create a new todo item
+            requestModels:
+              "application/json": createTodo
     iamRoleStatementsInherit: true
     iamRoleStatements:
       - Effect: Allow
@@ -82,6 +88,12 @@ functions:
           path: todos/{todoId}
           cors: true
           authorizer: Auth
+          reqValidatorName: RequestBodyValidator
+          documentation:
+            summary: Update a new todo item
+            description: Update a new todo item
+            requestModels:
+              "application/json": updateTodo
     iamRoleStatementsInherit: true
     iamRoleStatements:
       - Effect: Allow
@@ -138,6 +150,15 @@ resources:
         ResponseType: DEFAULT_4XX
         RestApiId:
           Ref: ApiGatewayRestApi
+
+    RequestBodyValidator:
+      Type: AWS::ApiGateway::RequestValidator
+      Properties:
+        Name: "request-body-validator"
+        RestApiId:
+          Ref: ApiGatewayRestApi
+        ValidateRequestBody: true
+        ValidateRequestParameters: false
 
     TodoDynamoDBTable:
       Type: "AWS::DynamoDB::Table"
