--- a/serverless.yml
+++ b/serverless.yml
@@ -14,11 +14,23 @@ provider:
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-west-2'}
 
+  tracing:
+    lambda: true
+    apiGateway: true
+
   environment:
     TODOS_TABLE: TodoApp-Todos-${self:provider.stage}
     ATTACHMENTS_S3_BUCKET: todo-app-attachments-${self:provider.stage}
     USER_ID_INDEX: UserIdIndex
     IMAGES_SIGNED_URL_EXPIRATION: 60 * 60 * 5 # 5 mins
+
+  iamRoleStatements:
+    - Effect: "Allow" # xray permissions (required)
+      Action:
+        - "xray:PutTraceSegments"
+        - "xray:PutTelemetryRecords"
+      Resource:
+        - "*"
 
 custom:
   documentation:
