--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,9 @@ plugins:
   - serverless-reqvalidator-plugin
   - serverless-aws-documentation
 
+package:
+  individually: true
+
 provider:
   name: aws
   runtime: nodejs12.x
@@ -33,6 +36,10 @@ provider:
         - "*"
 
 custom:
+  webpackIncludeModules:
+    forceExclude:
+      - aws-sdk
+      
   documentation:
     api:
       info:
